test/types/partial/dependent.simple.good
dependent.chpl:19: In function 'main':
dependent.chpl:21: error: Unable to resolve partial instantiation 'D(type int(64), p=1024)'
dependent.chpl:21: note: Instantiation of field 'p' depends on uninstantiated fields: 'param b', 'const x'
